@@ -1467,7 +1467,11 @@ void Core::startMplayer( QString file, double seek ) {
 		} else {
 			// Force styles for ass subtitles too
 			proc->addArgument("-ass-force-style");
-			proc->addArgument(pref->ass_styles.toString());
+			if (!pref->user_forced_ass_style.isEmpty()) {
+				proc->addArgument(pref->user_forced_ass_style);
+			} else {
+				proc->addArgument(pref->ass_styles.toString());
+			}
 		}
 		// Use the same font for OSD
 		if (!pref->ass_styles.fontname.isEmpty()) {
